@@ -1,3 +1,8 @@
+2009-07-29  Hans-Peter Nilsson  <hp@bitrange.com>
+
+	* elf64-mmix.c (mmix_elf_relax_section): Revert 2009-05-27
+	change.  Add note to head comment.
+
 2009-07-28  Jan Beulich  <jbeulich@novell.com>
 
 	* archive.c (get_extended_arelt_filename): Remove redundant
